NEWS - OpenPrinting CUPS Filters v1.21.3 - 2018-10-03
-----------------------------------------------------

CHANGES IN V1.21.4

	- pdftoraster, pdftoopvp, pdftoijs: Fix build with Poppler >=
	  0.70 (Issue #69, Pull request #70).
	- pdftopdf: Fixed printing multiple copies on driverless IPP
	  printers. When printing collated copies the multiple copies
	  got applied twice, resulting in n*n instead of n copies
	  (CUPS issue #5433).
	- pdftoraster, pdftoopvp, pdftoijs: Poppler removed memCheck
	  and gMemReport functions, remove appropriate calls (Issue
	  #62, Pull request #66).

CHANGES IN V1.21.3

	- foomatic-rip: Reset stdin after replacing the underlying file
          descriptor (Issue #58).

CHANGES IN V1.21.2

	- cups-browsed: Fixed freeing of literal string caused by
	  Coverity Scan issue fix (Debian bug #907399).

CHANGES IN V1.21.1

	- foomatic-rip: Fixed segmentation fault caused by wrong
          Coverity Scan issue fix (Issue #57, Debian bug #907026).
	- Build system: Require QPDF 8.1.0 or later as it is needed by
          bannertopdf (Issue #56).

CHANGES IN V1.21.0

	- libcupsfilters, cups-browsed, driverless, foomatic-rip,
	  parallel: Silenced warnings from newest gcc.
	- libcupsfilters: When generating a PPD for driverless
	  printing on a remote IPP printer, make pdftopdf not being
	  run by the local queue if the remote queue is a CUPS queue
	  to avoid running pdftopdf twice (CUPS Issue #5361).
	- libcupsfilters, cups-browsed, driverless, bannertopdf,
          foomatic-rip, pdftops, pdftoraster, rastertops,
          rastertoescpx, sys5ippprinter, beh: Fixed Coverity Scan
          issues. Thanks to Zdenek Dohnal (zdohnal at redhat dot com)
          for the tests and the patches.
	- bannertopdf: Switched over from using Poppler to using QPDF
	  for generating the PDF pages. With Poppler unstable APIs
	  were used which were subject to change. Thanks to Sahil
	  Arora for this project in the Google Summer of Code 2018